--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        //MPAndroidChart用
+        maven { url 'https://jitpack.io' }
     }
 }
 
